--- a/dyscordia_import.css
+++ b/dyscordia_import.css
@@ -1,7 +1,7 @@
 /* usertags.css */
-@import url('https://drive.google.com/file/d/1kv78GtRclV0tBL_FTqkuWHLKVVQ44uZX/view?usp=sharing');
+@import url('https://rustyneedles81.github.io/usertags.css');
 /* userpopouts.css */
-@import url("https://drive.google.com/file/d/1kv78GtRclV0tBL_FTqkuWHLKVVQ44uZX/view?usp=sharing");
+@import url("https://rustyneedles81.github.io/userPopouts.css");
 
 /* --== Define some general variables! ==-- */
 
